--- a/RetailCloudHQApp/android/app/build.gradle
+++ b/RetailCloudHQApp/android/app/build.gradle
@@ -4,7 +4,10 @@ apply plugin: "com.facebook.react"
 
 apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesAppBuildGradle(project)
 
-react { /* autolinking */ }
+react {
+    /* Autolinking */
+    // autolinkLibrariesWithApp() - Using default autolinking
+}
 
 def enableProguardInReleaseBuilds = false
 def jscFlavor = 'org.webkit:android-jsc:+'
@@ -21,12 +24,10 @@ android {
         versionCode 1
         versionName "1.0"
     }
-
+    
     buildFeatures {
         buildConfig true
     }
-
-    // keep debug keystore if you want
     signingConfigs {
         debug {
             storeFile file('debug.keystore')
@@ -34,15 +35,13 @@ android {
             keyAlias 'androiddebugkey'
             keyPassword 'android'
         }
-        // ADD release signing HERE
         release {
             storeFile file(MYAPP_UPLOAD_STORE_FILE)
             storePassword MYAPP_UPLOAD_STORE_PASSWORD
-            keyAlias      MYAPP_UPLOAD_KEY_ALIAS
-            keyPassword   MYAPP_UPLOAD_KEY_PASSWORD
+            keyAlias MYAPP_UPLOAD_KEY_ALIAS
+            keyPassword MYAPP_UPLOAD_KEY_PASSWORD
         }
     }
-
     buildTypes {
         debug {
             signingConfig signingConfigs.debug
@@ -50,7 +49,6 @@ android {
         release {
             signingConfig signingConfigs.release
             minifyEnabled enableProguardInReleaseBuilds
-            shrinkResources false
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
         }
     }
@@ -66,13 +64,10 @@ configurations.all {
 dependencies {
     implementation("com.facebook.react:react-android")
     implementation("com.facebook.react:flipper-integration")
+
     if (hermesEnabled.toBoolean()) {
         implementation("com.facebook.react:hermes-android")
     } else {
         implementation jscFlavor
     }
 }
-
-// DELETE these top-level blocks if they exist outside android { … }:
-// signingConfigs { release { … } }
-// buildTypes { release { … } }
