--- a/RetailCloudHQApp/android/app/build.gradle
+++ b/RetailCloudHQApp/android/app/build.gradle
@@ -58,6 +58,9 @@ configurations.all {
     resolutionStrategy {
         force 'androidx.core:core-ktx:1.12.0'
         force 'androidx.core:core:1.12.0'
+        // Ensure coroutines compatible with Kotlin 1.9.x
+        force 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.8.1'
+        force 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.8.1'
     }
 }
 
