--- a/RetailCloudHQApp/android/app/build.gradle
+++ b/RetailCloudHQApp/android/app/build.gradle
@@ -14,6 +14,7 @@ def jscFlavor = 'org.webkit:android-jsc:+'
 
 android {
     ndkVersion rootProject.ext.ndkVersion
+    buildToolsVersion rootProject.ext.buildToolsVersion
     compileSdkVersion rootProject.ext.compileSdkVersion
 
     namespace "com.retailcloudhqapp"
@@ -21,8 +22,8 @@ android {
         applicationId "com.retailcloudhqapp"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "1.0.2"
     }
     
     buildFeatures {
